--- a/index.html
+++ b/index.html
@@ -232,8 +232,8 @@
             </div>
         </footer>
     </div>
-    <script src="http://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-    <script src="http://kit.fontawesome.com/58a810656e" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+    <script src="https://kit.fontawesome.com/58a810656e" crossorigin="anonymous"></script>
     <script>
         var typeData = new Typed(".role", {
             strings: [
