--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                     <h1 class="contactuse-heading">Contact me</h1>
                     <h3 class="contactus-sub-heading">Questions, Thoughts, Or Just Want To Say Hello></h3>
                     <div class="contactus-form-container">
-                        <form action="">
+                        <form netlify>
                             <div class="formfield-container">
                                 <input class="formfield" type="text" name="name" id="" placeholder="Enter Your Name" />
 
