--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="faded-text">Aslaan</div>
                 <div class="hero-section-left">
                     <div class="hero-section-heading">
-                        Hi! Mohammed Aslaan
+                        Hi! I am Mohammed Aslaan
                     </div>
                     <div class="hero-section-heading hero-section-sub-heading">
                         I am a <span class="role"></span>
