--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         I'm a 3rd Year Computer Science Engineering Student and here is my portfolio website. Here
                         you'll learn about my journey as a software developer.
                     </div>
-                    <div class="btn-pink" id="contactus">Hire me</div>
+                    <div class="btn-pink" id="btn"><a href="#contactme">Hire me</a></div>
                 </div>
                 <div class="hero-section-right">
                     <div class="absolute icons icon-dots">
