--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 </h2>
                 <div class="skill-subHeading">
                     <p>
-                        3rd Year Computer Science Engineering Student. Looking for a
+                        I am 3rd Year Computer Science Engineering Student. Looking for a
                         internship in a reputed software development company, where I can
                         apply my strong fundamental problem solving skill and development
                         skill for production of a project. Willing to learn and contribute as a
